package jp.co.interprism.training.DDD3.jr.pricing.domain.fare.basic;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class BasicFare {
    private final BasicFareYen basicFareYen;
}
